vendor/vnc/Server.h


/**
 * @file
 * Creates a VNC-compatible Server app for a computer you want to control.
 *
 * Capturing the device screen and injecting input is handled by @c vncagent,
 * an executable provided with the SDK.  You must bundle this executable with
 * your Server; you can find it in the
 * <tt>\<vnc-sdk\>/libs/\<architecture\></tt> directory.
 *
 * There are two ways in which a Server can operate: as a regular application,
 * following a normal application lifecycle (i.e. exiting when the user logs out
 * of the desktop session); or as a service, which can continue running across
 * sessions and at the login screen. In either case, the SDK must first be
 * initialized with a call to vnc_init().
 *
 * To create a Server as a regular application, use vnc_Server_create(), and for
 * a service, use vnc_Server_createService(). In either case, you can optionally
 * specify a path to (or a new file name for) @c vncagent.  Note you must also
 * call one of the methods in @ref DataStore.h to enable the Server to persist
 * the automatically-generated RSA public/private key pair and other important
 * information, and you can optionally call a method in Logger.h to set up
 * logging. Note that methods in DataStore.h and Logger.h may be called before
 * calling vnc_init().
 *
 * Next, populate a @ref vnc_Server_SecurityCallback structure with functions
 * used to verify credentials presented by a connecting Viewer, and pass it
 * into a call to vnc_Server_setSecurityCallback().
 *
 * Typically, a Server joins VNC Cloud and listens for incoming connections
 * from one or more Viewers.  To start your Server listening, call
 * vnc_Server_getConnectionHandler() to obtain a @ref vnc_ConnectionHandler,
 * and pass that into a call to vnc_CloudListener_create() along with a
 * @c listen Cloud address and password.
 *
 * (Note that you can reverse this methodology and have your Server connect to
 * listening Viewers if you wish.  To see how to do this, see Viewer.h.)
 *
 * When a new viewer connection arrives at the server, any defined
 * vnc_Server_SecurityCallback::verifyPeer callback will be called to allow the
 * peer's identity to be verified (in addition to the verification already
 * carried out by VNC Cloud).  Next,
 * vnc_Server_SecurityCallback::isUserNameRequired and
 * vnc_Server_SecurityCallback::isPasswordRequired will be called to determine
 * what type of authentication credentials the viewer should be prompted for.
 * Once the viewer provides credentials,
 * vnc_Server_SecurityCallback::authenticateUser is called to allow the
 * credentials to be verified, and appropriate @ref vnc_Server_Permissions
 * granted for the connection.
 *
 * Note that by default a Viewer consistently failing to authenticate
 * is blacklisted to guard against brute-force and dictionary attacks; call
 * vnc_Server_setBlacklist() to configure frequency and timeouts.
 *
 * Once authenticated, any defined
 * vnc_Server_ConnectionCallback::connectionStarted callback is called, and the
 * server starts remoting the display, and injecting input events received from
 * the client.  Text copied to the clipboard on the device is sent to the
 * viewer, and any clipboard text sent by the viewer is made available to
 * applications on the device's clipboard (assuming the
 * @ref vnc_Server_PermClipboard permission has been granted).
 *
 * The connection will end if vnc_Server_disconnect() or
 * vnc_Server_disconnectAll() is called, or may end due to an action
 * on the Viewer, or due to some other event such as a network failure.  When
 * the connection ends, the
 * vnc_Server_ConnectionCallback::connectionEnded callback will be called.
 *
 * To stop your Server listening and disconnect from VNC Cloud, call
 * vnc_CloudListener_destroy().  To destroy your Server, call
 * vnc_Server_destroy().
 *
 * To make sure the SDK is shutdown and any resources are cleaned up, call
 * vnc_shutdown().
 */

/**
 * Enumeration of screen capture methods.
 *
 * @see vnc_Server_setCaptureMethod()
 */
typedef enum {
  /**
   * Use the optimal capture method for the platform.  This is the default.
   */
  vnc_Server_CaptureOptimal = 0,
  /**
   * Use a fallback capture method under Windows and Linux.  This is likely to
   * be slower, but may solve rendering glitches with certain third-party
   * applications.  Not supported under Mac OS X.
   */
  vnc_Server_CaptureFallback,
} vnc_Server_CaptureMethod;


/**
 * Callback receiving security-related notifications for a Server.
 *
 * @see vnc_Server_setSecurityCallback()
 */
typedef struct {
  /**
   * Verify a Viewer's cryptographic identity.
   *
   * This callback is made when a Viewer makes a connection, but before
   * authentication.
   *
   * It is optional to define a callback function of this type.  Note that
   * VNC Cloud mutually verifies peer identities for you, so this check
   * is for peace-of-mind only (and only likely to be useful if you have
   * out-of-band access to a list of all potential Viewer identities).
   *
   * @param connection The new connection.  Note that if the connection does not
   *     subsequently authenticate itself, then the
   *     vnc_Server_ConnectionCallback::connectionEnded notification will not be
   *     called, therefore you should not cache or store the @ref vnc_Connection
   *     pointer at this stage.
   * @param viewerHexFingerprint A human-readable hexadecimal representation
   *     of a 2048-bit RSA public key hash.
   * @param viewerRsaPublic The Viewer's public key.  See
   *     vnc_RsaKey_Callback::detailsReady for the format.
   *
   * @return #vnc_true to continue the connection or #vnc_false to terminate it.
   */
  vnc_bool_t
  (*verifyPeer)(void* userData,
                vnc_Server* server,
                vnc_Connection* connection,
                const char* viewerHexFingerprint,
                const vnc_DataBuffer* viewerRsaPublic);

  /**
   * Decide if a connecting Viewer is required to provide a user name.
   *
   * This callback is made when a Viewer makes a connection, after peer identity
   * verification has succeeded.
   *
   * It is optional to define a callback function of this type, but note that
   * if you do not, a connecting Viewer is required to provide a user name.
   *
   * In your implementation, you should return #vnc_false if there is no need
   * for a Viewer to provide a user name, and #vnc_true if there is.
   *
   * @param connection The incoming connection.  Note that if the connection
   *     does not subsequently authenticate itself, then the
   *     vnc_Server_ConnectionCallback::connectionEnded notification will not be
   *     called, therefore you should not cache or store the @ref vnc_Connection
   *     pointer at this stage.
   *
   * @return #vnc_false if a user name is not required, else #vnc_true.
   */
  vnc_bool_t
  (*isUserNameRequired)(void* userData,
                        vnc_Server* server,
                        vnc_Connection* connection);

  /**
   * Decide if a connecting Viewer is required to provide a password.
   *
   * This callback is made when a Viewer makes a connection, after peer identity
   * verification has succeeded.
   *
   * It is optional to define a callback function of this type, but note that
   * if you do not, a connecting Viewer is required to provide a password.
   *
   * In your implementation, you should return #vnc_false if there is no need
   * for a Viewer to provide a password, and #vnc_true if there is.
   *
   * @param connection The incoming connection.  Note that if the connection
   *     does not subsequently authenticate itself, then the
   *     vnc_Server_ConnectionCallback::connectionEnded notification will not be
   *     called, therefore you should not cache or store the @ref vnc_Connection
   *     pointer at this stage.
   *
   * @return #vnc_false if a password is not required, else #vnc_true.
   */
  vnc_bool_t
  (*isPasswordRequired)(void* userData,
                        vnc_Server* server,
                        vnc_Connection* connection);

  /**
   * Authenticate credentials presented by a Viewer.
   *
   * This callback is made when a Viewer has sent credentials to be
   * authenticated, after the Server has requested the details returned by the
   * vnc_Server_SecurityCallback::isUserNameRequired and
   * vnc_Server_SecurityCallback::isPasswordRequired callbacks.
   *
   * It is mandatory to define this callback function.
   *
   * In your implementation, you should authenticate @p username and
   * @p password, and either return 0 to terminate the
   * connection, or any combination of the @ref vnc_Server_Permissions flags to
   * simultaneously approve the connection and grant a set of session
   * permissions.
   *
   * Please see the <a href="http://www.securecoding.cert.org">CERT Coding
   * Standards</a> for guidelines on handling passwords in reusable memory, in
   * particular sections MSC18-C and MEM03-C.
   *
   * @param connection The incoming connection.
   * @param username The user name provided by the Viewer.  This is provided
   *     according to whether vnc_Server_SecurityCallback::isUserNameRequired
   *     requested it (provided by default).
   * @param password The password provided by the Viewer.  This is provided
   *     according to whether vnc_Server_SecurityCallback::isPasswordRequired
   *     requested it (provided by default).
   *
   * @return Any combination of the @ref vnc_Server_Permissions flags, or 0
   *     (no permissions) to reject the connection.
   */
  int
  (*authenticateUser)(void* userData,
                      vnc_Server* server,
                      vnc_Connection* connection,
                      const char* username,
                      const char* password);

} vnc_Server_SecurityCallback;



/**
 * Callback for handling input events.
 *
 * @see vnc_Server_setInputEventsCallback()
 */
 typedef struct {
  /**
   * Handle pointer events manually.
   *
   * This callback is made when a Viewer has sent pointer events
   * to the server. Return false to have the Server handle the pointer
   * event as normal, or true to indicate it has been handled and
   * should therefore cancel the default handling.
   *
   * @param x The X position of the pointer event.
   * @param y The Y position of the pointer event.
   * @param buttonMask Bitmask of which buttons are down on the pointing device. 
   *                   The first bit is the main button, the second bit is the secondary button, etc ...
   * @param isRelative #vnc_true if the (x,y) position is relative to the last pointer position
   *                   #vnc_false if the position is absolute.
   *
   * @return #vnc_true if the pointer-event is to be handled by the SDK caller (i.e. override the behaviour),
   *         #vnc_false if the pointer-event is to be handled by the Server as normal (default behaviour).
   */
   vnc_bool_t
   (*pointerEventCallback)(void* userData,
                           vnc_Server* server,
                           int x,
                           int y, 
                           int buttonMask,
                           vnc_bool_t isRelative);

  /**
   * Handle keypress events manually.
   *
   * This callback is made when a Viewer has sent keypress events
   * to the server. Return false to have the Server handle the keypress
   * event as normal, or true to indicate it has been handled and
   * should cancel the default handling.
   *
   * @param key Key pressed from the Viewer. Expressed as an X11 keysym code. See keyboard.h.
   * @param down True if this is the "down" event, false if this is the "up" event.
   *
   * @return #vnc_true if the keypress event is to be handled by the SDK caller (i.e. override the behaviour),
   *         #vnc_false if the keypress event is to be handled by the Server as normal (default behaviour).
   */
   vnc_bool_t
   (*keyEventCallback)(void* userData,
                       vnc_Server* server,
                       int key,
                       vnc_bool_t down);

} vnc_Server_InputEventsCallback;


/**
 * Enumeration of encryption levels.
 *
 * @see vnc_Server_setEncryptionLevel()
 */
typedef enum {
  /**
   * Use strong encryption.  This is the default.
   */
  vnc_Server_EncryptionLevel_Default = 0,
  /**
   * Use the strongest available encryption, possibly at the cost of speed.
   */
  vnc_Server_EncryptionLevel_Maximum,
  /**
   * Allow the negotation of encryption levels, including no encryption.
   * Use with caution.
   * Requires a Third-Party Connectivity Add-on.
   */
  vnc_Server_EncryptionLevel_AllowUnencrypted,
} vnc_Server_EncryptionLevel;


/**
 * Sets the desired encryption level of the session from the range of options
 * enumerated by @ref vnc_Server_EncryptionLevel.
 *
 * This will not affect the encryption level of established connections.
 *
 * If a Viewer and Server select different encryption levels, connections
 * between them take place at the higher of their selected levels.
 *
 * @param server The current Server.
 * @param level The new encryption level.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The encryption level is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Server_setEncryptionLevel(vnc_Server* server,
                              vnc_Server_EncryptionLevel level);


/**
 * Returns the encryption level being used with an incoming connection,
 * or the Server's current encryption level if the connection is NULL.
 *
 * @param server The current Server.
 * @param connection The incoming connection or NULL.
 */
VNC_SDK_API vnc_Server_EncryptionLevel
vnc_Server_getEncryptionLevel(vnc_Server* server,
                              vnc_Connection* connection);


/**
 * Set a password for use with third-party VNC Viewers, using VncAuth
 * authentication.
 * Use in conjunction with vnc_Server_setEncryptionLevel(), setting the level
 * to vnc_Server_EncryptionLevel_AllowUnencrypted, enabled by the Third-Party
 * Connectivity add-on.
 * If all requirements above are met, this password will be used instead of
 * the @ref vnc_Server_SecurityCallback callbacks.
 *
 * @param server The current Server.
 * @param password The VncAuth password.
 *
 * @retval UnexpectedCall
 *        The Third-Party Connectivity Add-on is not available
 *
 */
VNC_SDK_API vnc_status_t
vnc_Server_setVncAuthPassword(vnc_Server* server,
                              const char* password);



/**
 * Sets the number of seconds to wait before disconnecting idle Viewers.
 * To turn off the idle timeout, use a value of 0.
 *
 * @param server The current Server.
 * @param idleTimeout The idle timeout in seconds.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The idle timeout is invalid
 */
VNC_SDK_API vnc_status_t
vnc_Server_setIdleTimeout(vnc_Server* server, int idleTimeout);


/**
 * Gets the current number of seconds to wait before disconnecting idle
 * Viewers. A value of 0 indicates no timeout is set.
 *
 * @param server The current Server.
 */
VNC_SDK_API int
vnc_Server_getIdleTimeout(vnc_Server* server);




/**
 * Sets input control related callbacks for the Server.
 *
 * @param server The current Server.
 * @param callback The new input event callbacks.
 *
 * @return #vnc_success or #vnc_failure, in which case call
 * vnc_getLastError() to get the error code.
 */
VNC_SDK_API vnc_status_t
vnc_Server_setInputEventsCallback(
  vnc_Server* server,
  _In_opt_ const vnc_Server_InputEventsCallback* callback,
  void* userData);



/**
 * Specifies the screen capture method used by the Server.  By default, an
 * optimal method is chosen for each platform.  In the unlikely event you
 * experience screen capture issues under Windows or Linux, try the fallback
 * method (this is not supported under Mac OS X).
 *
 * @param server The current Server.
 * @param captureMethod One of the @ref vnc_Server_CaptureMethod flags.
 * @return #vnc_success or #vnc_failure, in which case call
 *     vnc_getLastError() to get the error code.
 *
 * @retval NotSupported
 *     @p captureMethod is not supported on this platform.
 */
VNC_SDK_API vnc_status_t
vnc_Server_setCaptureMethod(vnc_Server* server,
                            vnc_Server_CaptureMethod captureMethod);