src/server.rs

extern "C" {
    #[doc = " Returns the encryption level being used with an incoming connection,"]
    #[doc = " or the Server's current encryption level if the connection is NULL."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param connection The incoming connection or NULL."]
    pub fn vnc_Server_getEncryptionLevel(
        server: *mut vnc_Server,
        connection: *mut vnc_Connection,
    ) -> vnc_Server_EncryptionLevel;
}
extern "C" {
    #[doc = " Set a password for use with third-party VNC Viewers, using VncAuth"]
    #[doc = " authentication."]
    #[doc = " Use in conjunction with vnc_Server_setEncryptionLevel(), setting the level"]
    #[doc = " to vnc_Server_EncryptionLevel_AllowUnencrypted, enabled by the Third-Party"]
    #[doc = " Connectivity add-on."]
    #[doc = " If all requirements above are met, this password will be used instead of"]
    #[doc = " the @ref vnc_Server_SecurityCallback callbacks."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param password The VncAuth password."]
    #[doc = ""]
    #[doc = " @retval UnexpectedCall"]
    #[doc = "        The Third-Party Connectivity Add-on is not available"]
    #[doc = ""]
    pub fn vnc_Server_setVncAuthPassword(
        server: *mut vnc_Server,
        password: *const ::std::os::raw::c_char,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Sets the number of seconds to wait before disconnecting idle Viewers."]
    #[doc = " To turn off the idle timeout, use a value of 0."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param idleTimeout The idle timeout in seconds."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The idle timeout is invalid"]
    pub fn vnc_Server_setIdleTimeout(
        server: *mut vnc_Server,
        idleTimeout: ::std::os::raw::c_int,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Gets the current number of seconds to wait before disconnecting idle"]
    #[doc = " Viewers. A value of 0 indicates no timeout is set."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    pub fn vnc_Server_getIdleTimeout(server: *mut vnc_Server) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets input control related callbacks for the Server."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param callback The new input event callbacks."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call"]
    #[doc = " vnc_getLastError() to get the error code."]
    pub fn vnc_Server_setInputEventsCallback(
        server: *mut vnc_Server,
        callback: *const vnc_Server_InputEventsCallback,
        userData: *mut ::std::os::raw::c_void,
    ) -> vnc_status_t;
}
extern "C" {
    #[doc = " Specifies the screen capture method used by the Server.  By default, an"]
    #[doc = " optimal method is chosen for each platform.  In the unlikely event you"]
    #[doc = " experience screen capture issues under Windows or Linux, try the fallback"]
    #[doc = " method (this is not supported under Mac OS X)."]
    #[doc = ""]
    #[doc = " @param server The current Server."]
    #[doc = " @param captureMethod One of the @ref vnc_Server_CaptureMethod flags."]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call"]
    #[doc = "     vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @retval NotSupported"]
    #[doc = "     @p captureMethod is not supported on this platform."]
    pub fn vnc_Server_setCaptureMethod(
        server: *mut vnc_Server,
        captureMethod: vnc_Server_CaptureMethod,
    ) -> vnc_status_t;
}
